feat: security hardening, onboarding, forecasting, and UX improvements
Security:
- Scope CORS to explicit origins (configurable via CORS_ALLOWED_ORIGINS env var)
- Add Bucket4j rate limiting: 10 req/min on login, 5 req/min on import and insights
- Add ResponseStatusException handler in GlobalExceptionHandler for uniform error shape
- Add NetworkPolicy to restrict pod-to-pod traffic in k8s

Backend:
- Add JPA batch fetch size (25) to resolve N+1 on transaction list queries
- Nightly purge of expired password reset tokens via @Scheduled
- Audit logging (WARN-level) on all bulk deletes, view create/delete, and API key changes
- Migrations 028-030: unique constraints on bank_account and widget position, 5 new
  performance indexes, pg_trgm extension + GIN indexes for fast ILIKE search
- Implement TAG filter in widget service using real per-tag breakdown/trend/sum queries
- ForecastService + ForecastController: GET /api/forecast/monthly combines anchor-month
  actual spend with pending recurring charges to project end-of-month total

Frontend:
- Onboarding flow: persona picker (Personal / Household / Power User) shown on first
  login; nav filters to persona-relevant routes; Change button in sidebar footer
- FeatureGuide: collapsible inline "How this page works" panel on all 17 major pages,
  collapsed state persisted per-page in localStorage
- GettingStartedChecklist on Dashboard: 4-step setup guide auto-checks completion from
  existing query cache; dismissible; swaps to congrats banner when all done
- ForecastPanel on Dashboard: indigo panel with progress bar (spent vs projected),
  pending recurring charges list, stale-data warning, collapses to header after review
- Proper confirmation dialogs for delete in ViewsPage and SettlementsPage (replaced
  native confirm() with role=dialog modals)
- Optimistic update for reviewed toggle in TransactionPage
- Error states added to SettlementsPage, ViewsPage, AlertsPage
- aria-label on icon buttons, role=dialog/aria-modal on m